test: update and add comprehensive tests across all modules
- Update OrderControllerTest for new controller split, ownership checks, and CAS transitions
- Add OrderControllerAuthorizationTest for role-based access verification
- Add OrderIntegrationTest for end-to-end order flow
- Add OrderOwnershipTest for cross-user order access prevention
- Add OrderMapperTest for DisputeReason mapping
- Update all order use case tests for CAS updateStatusIfCurrent pattern
- Update CancelOrderUseCaseTest for stock restoration
- Update RefundOrderUseCaseTest for stock restoration
- Update FindOrdersBySellerUseCaseTest for pagination
- Add PaymentControllerTest for ownership validation
- Add PaymentOwnershipTest for cross-user payment access prevention
- Add PaymentIdempotencyTest for concurrent payment handling
- Add WebhookControllerTest for HMAC validation
- Add WebhookIntegrationTest for webhook processing
- Add CheckoutUseCaseTest for transactional flow and compensation
- Add AuthIntegrationTest and JwtAuthFilterTest
- Add JwtServiceTest for token generation/validation
- Add CustomerAvatarUseCaseTest and CustomerIntegrationTest
- Add SellerAvatarUseCaseTest
- Add StockConcurrencyTest for product stock operations
- Add ProductIntegrationTest and ReviewIntegrationTest
- Add LiquibaseMigrationTest for migration validation
- Add ConfigServerFailureTest and ProfileConfigurationTest
- Add SecurityConfigEndpointTest for endpoint authorization rules
- Add AsyncConfigurationTest, GlobalExceptionHandlerTest
- Add AuthorizationServiceTest for ownership checks
- Add WebhookSignatureValidatorTest, NotificationRetryTest
- Add MinIOBucketResolverTest
- Add application-test.yml test profile configuration